# lustre-release

./: .gitignore  ChangeLog  LU-6852.patch  LUSTRE-VERSION-GEN  NACHOS  README  autoMakefile.am  autogen.sh  configure.ac  groups  ignore-me  local-env.sh  local_env.sh  lustre-dkms.spec.in  lustre-modules.files  lustre-osd-ldiskfs.files  lustre-osd-zfs.files  lustre.spec.in  project.config  readme
ldiskfs/: .gitignore  Makefile.am  Makefile.in  README  autoMakefile.am  autogen.sh  configure.ac  ldiskfs.spec.in  ldiskfs_config.h.in  lustre-ldiskfs.spec.in
ldiskfs/config/: ldiskfs-build.m4
ldiskfs/kernel_patches/patches/: export-ext4-2.6-pnfs.patch  export-ext4-2.6-rhel6.patch  export-ext4-3.0-sles11.patch  ext3-dynlocks-common.patch  ext3-export-64bit-name-hash.patch  ext3-extents-2.6.18-vanilla.patch  ext3-mballoc3-2.6.18.patch  ext3-mmp-2.6.18-vanilla.patch  ext4-Initialize-fsync-transaction-ids-in-ext4_new_in.patch  ext4-async_iblock_read.patch  ext4-back-dquot-to-sles11sp2.patch  ext4-big-endian-check-2.6-pnfs.patch  ext4-big-endian-check-2.6-rhel6.patch  ext4-big-endian-check-2.6-sles11.patch  ext4-big-endian-check-3.0-sles11sp2  ext4-big-endian-check-3.0-sles11sp2.patch  ext4-check-rec_len.patch  ext4-claim_inode-free_inode-race.patch  ext4-convert-group-lock-sles11.patch  ext4-dir-dotdot-update.patch  ext4-disable-delalloc-sles11-sp0.patch  ext4-disable-delalloc-sles11.patch  ext4-disable-mb-cache-pnfs.patch  ext4-disable-mb-cache-rhel5.patch  ext4-disable-mb-cache-rhel6.patch  ext4-disable-mb-cache-sles11.patch  ext4-disable-mb-cache-sles11sp2.patch  ext4-disable-write-bar-rhel6.patch  ext4-dynlocks-2.6-rhel5.patch  ext4-dynlocks-2.6-rhel6.patch  ext4-dynlocks-2.6.patch  ext4-dynlocks-common-pnfs.patch  ext4-dynlocks-common-rhel6.patch  ext4-dynlocks-common-sles11.patch  ext4-dynlocks-common.patch  ext4-export-blocks_for_truncate.patch  ext4-ext4_dx_add_entry.patch  ext4-ext_generation-rhel6.patch  ext4-extents-mount-option-pnfs.patch  ext4-extents-mount-option-rhel5.patch  (+98 more)
ldiskfs/kernel_patches/patches/3.12/: ext4-inode-version.patch  ext4-max-dir-size.patch  ext4-not-discard-preallocation-umount.patch
ldiskfs/kernel_patches/patches/fc19/: export-ext4-2.6.patch  ext4-change-entry-avoid-conflict.patch  ext4-disable-mb-cache.patch  ext4-dynlocks-common.patch  ext4-fiemap-2.6.patch  ext4-fiemap.patch  ext4-force_over_128tb.patch  ext4-inode-version.patch  ext4-kill-dx_root.patch  ext4-large-eas.patch  ext4-lookup-dotdot.patch  ext4-max-dir-size.patch  ext4-mballoc-extra-checks.patch  ext4-mballoc-pa_free-mismatch.patch  ext4-misc.patch  ext4-osd-iam-exports.patch  (+7 more)
ldiskfs/kernel_patches/series/: ldiskfs-2.6-rhel5-ext4.series  ldiskfs-2.6-rhel6.4.series  ldiskfs-2.6-rhel6.5.series  ldiskfs-2.6-rhel6.6.series  ldiskfs-2.6-rhel6.7.series  ldiskfs-2.6-rhel6.series  ldiskfs-2.6-sles11-sp0.series  ldiskfs-2.6-sles11-sp1.series  ldiskfs-2.6-sles11.series  ldiskfs-2.6.38-pnfs.series  ldiskfs-3.0-sles11-sp2.series  ldiskfs-3.0-sles11.series  ldiskfs-3.0-sles11sp3.series  ldiskfs-3.10-rhel7.2.series  ldiskfs-3.10-rhel7.3.series  ldiskfs-3.10-rhel7.series  ldiskfs-3.12-sles12.series  ldiskfs-3.12-sles12sp1.series  ldiskfs-3.14-fc20.series  ldiskfs-3.15-fc20.series  ldiskfs-3.x-fc19.series
ldiskfs/ldiskfs/: .gitignore  Makefile.in  autoMakefile.am  ldiskfs_config.h.in  ldiskfs_definitions.h.in
libcfs/libcfs/linux/: Makefile.am  crc32c-pcl-intel-asm_64.S  linux-cpu.c  linux-crypto-adler.c  linux-crypto-crc32.c  linux-crypto-crc32c-pclmul.c  linux-crypto-crc32pclmul.c  linux-crypto.c  linux-curproc.c  linux-debug.c  linux-fs.c  linux-lock.c  linux-lwt.c  linux-mem.c  linux-module.c  linux-prim.c  linux-proc.c  linux-sync.c  linux-sysfs.c  linux-tcpip.c  linux-tracefile.c  linux-tracefile.h  linux-utils.c
lnet/utils/lnetconfig/: Makefile.am  liblnd.h  liblnetconfig.c  liblnetconfig.h  liblnetconfig_ib.c  liblnetconfig_lnd.c
lustre-iokit/: ChangeLog  configure.ac  lustre-iokit.spec.in
lustre-iokit/ior-survey/: README.ior-survey  iokit-parse-ior  ior-survey
lustre-iokit/mds-survey/: mds-survey
lustre-iokit/mdt-survey/: Makefile.am  README.mdt-survey  mdt-survey
lustre-iokit/obdfilter-survey/: README.obdfilter-survey  iokit-libecho  iokit-plot-obdfilter  libecho  obdfilter-survey  plot-obdfilter
lustre-iokit/ost-survey/: iokit-plot-ost  ost-survey  plot-ost
lustre-iokit/sgpdd-survey/: iokit-plot-sgpdd  plot-sgpdd  sgpdd-survey
lustre-iokit/stats-collect/: README  README.iokit-lstats  lstats.sh
lustre/tests/daos/: Makefile.am  daos_eq.c  daos_test.c  daos_test.h
lustre/utils/: .gitignore  LCOPYING  Makefile.am  check.h  const_check.h  create_iam.c  daos.c  get_params  get_pools  get_quota  ioctlcheck.c  json.c  json.h  kernel_user_comm.c  l_getidentity.c  l_getsepol.c  lctl.c  lfs.c  lhsmtool_posix.c  libiam.c  liblustreapi.c  liblustreapi.map  liblustreapi_hsm.c  liblustreapi_json.c  liblustreapi_kernelconn.c  liblustreapi_ladvise.c  liblustreapi_layout.c  liblustreapi_lease.c  liblustreapi_nodemap.c  liblustreapi_param.c  liblustreapi_util.c  libobe.c  libobe.h  ll_decode_filter_fid.c  ll_decode_linkea.c  ll_recover_lost_found_objs.c  llanalyze  llobdstat  llog_catfix.c  llog_reader.c  (+42 more)
lustre/utils/cYAML/: Makefile.am  libcYAML.c  libcYAML.h
lustre/utils/gss/: Makefile.am  cacheio.c  context.h  context_lucid.c  err_util.c  gss_oids.c  gss_util.c  gssd.c  gssd.h  gssd_proc.c  krb5_util.c  lgss_keyring.c  lgss_krb5_utils.c  lgss_krb5_utils.h  lgss_sk  lgss_sk.c  lgss_sk_utils.c  lgss_utils.c  lgss_utils.h  lsupport.c  lsupport.h  nfs-utils-1.0.10-lustre.diff  sk_utils.c  sk_utils.h  svcgssd.c  svcgssd.h  svcgssd_main_loop.c  svcgssd_mech2file.c  svcgssd_proc.c
lustre/utils/lcmd/: Makefile.am  kvl.c  kvl.h  lcmd.c  libauto_complete.c  libauto_complete.h  liblustre_cfg_cmds.c  lustre_cmds
lustre/utils/libyaml/: Makefile.am  emitter.c  libyaml-0.so.2  libyaml.c  parser.c  scanner.c
lustre/utils/lustreconfigapi/: Makefile.am  liblustreconfigapi.c  liblustreconfigapi.h  liblustreconfigapi.i  liblustreconfigapi_swig_exta.c  liblustreconfigapi_wrap.c
(+1754 files in other folders)
