EXTRA_DIST = \
	crc32-pclmul_asm.S \
	crc32c-pcl-intel-asm_64.S \
	inst.h \
	linux-cpu.c	\
	linux-crypto-adler.c \
	linux-crypto-crc32.c \
	linux-crypto-crc32c-pclmul.c \
	linux-crypto-crc32pclmul.c \
	linux-crypto.c \
	linux-curproc.c \
	linux-debug.c \
	linux-module.c \
	linux-prim.c \
	linux-proc.c \
	linux-tracefile.c
